--- a/content_main.html
+++ b/content_main.html
@@ -27,39 +27,12 @@
     <section class="abl">
         <div class="container-fluid m0">
             <div class="row">
-
-                <div class="col-lg-2 col-md-3 col-sm-3 col-12 m0 lbl">
-                    <div class="logo text-center bc1 m0 dc">
-                        <a href="content_main.html" class="tc1 m0">
-                            <h1>DereCube</h1>
-                        </a>
-                    </div>
-                    <div class="panel bc2 m0 pv">
-                        <div class="row lbtext ">
-                            <a href="content_main.html" class="tc2 m0">
-                                <h2>Главная</h2>
-                            </a>
-                        </div>
-                        <div class="row lbtext ">
-                            <a href="content_collection.html" class="tc2 m0">
-                                <h2>Колекции</h2>
-                            </a>
-                        </div>
-                        <div class="row lbtext ">
-                            <a href="content_AI.html" class="tc2 m0">
-                                <h2>ИИ</h2>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-10 col-md-9 col-sm-9 col-12 m0">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12 m0">
                     <div class="row tyn-inf">
-                        <div class="col-lg-8 col-md-8 col-sm-12 bc3 m0 tbl">
+                        <div class="col-lg-8 col-md-8 col-sm-12 bc3 m0 btyn">
 
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 bc2 m0 rbl">
+                        <div class="col-lg-4 col-md-4 col-sm-12 bc2 m0 binf">
                             <div class="icon bor">
                                 <img class="iimg" src="sourse/images/20-12-2013556340.png" alt="zoro">
                             </div>
