--- a/player.html
+++ b/player.html
@@ -28,15 +28,15 @@
         <div class="container-fluid m0">
             <div class="row">
 
-                <div class="col-lg-2 col-md-3 col-sm-3 col-12 m0 lbl">
-                    <div class="settyn bc1 text-center m0 ut">
+                <div class="col-lg-2 col-md-3 col-sm-3 col-12 m0 btyninf">
+                    <div class="settyn bc1 text-center m0">
                         <div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-10 col-md-9 col-sm-9 col-12 m0">
+                <div class="col-lg-10 col-md-9 col-sm-9 col-12 m0 bplaer">
 
-                    <div class="row line libl bc1 m0">
+                    <div class="row line bc1 m0">
                         <div class="col-lg-5 bor">
 
                         </div>
@@ -47,7 +47,7 @@
 
                         </div>
                     </div>
-                    <div class="row timer tibl">
+                    <div class="row timer">
                         <div class="bc2 m0">
                         </div>
                     </div>
