--- a/nav.html
+++ b/nav.html
@@ -93,18 +93,18 @@
 <body>
     <nav class="bnav">
         <div class="logo text-center bc1 m0 blogo">
-            <a href="content_main.html" target="mainFrame" class="tc1 m0"><img class="Dereimg"
-                    src="sourse/images/logo5.png" alt="DereCube"></a>
+            <a href="/content_main.html" target="mainFrame" class="tc1 m0"><img class="Dereimg"
+                    src="/sourse/images/logo5.png" alt="DereCube"></a>
         </div>
         <div class="panel bc2 m0">
             <div class="row lbtext text-center">
-                <a href="content_main.html" target="mainFrame" class="tc2 hh3 m0">Главная</a>
+                <a href="/content_main.html" target="mainFrame" class="tc2 hh3 m0">Главная</a>
             </div>
             <div class="row lbtext text-center">
-                <a href="content_page2.html" target="mainFrame" class="tc2 hh3 m0">Колекции</a>
+                <a href="/content_page2.html" target="mainFrame" class="tc2 hh3 m0">Колекции</a>
             </div>
             <div class="row lbtext text-center">
-                <a href="content_page3.html" target="mainFrame" class="tc2 hh3 m0">ИИ</a>
+                <a href="/content_page3.html" target="mainFrame" class="tc2 hh3 m0">ИИ</a>
             </div>
             <div class="row lbtext text-center button-wrapper">
                 <a href="#" class="plus-button tc1 bc1 hh3 m0" target="mainFrame" aria-label="Добавить"></a>
@@ -125,5 +125,6 @@
         });
     </script>
 </body>
+
 
 </html>
