--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     <!-- Контейнер для навигации и основного контента -->
     <div id="container">
         <!-- Навигационная панель слева -->
-        <iframe id="navFrame" src="nav.html" title="Навигация"
+        <iframe id="navFrame" src="/nav.html" title="Навигация"
     style="transform: scale(1); transform-origin: 0 0;"></iframe>
         <!-- Основной контент сайта -->
-        <iframe id="mainFrame" name="mainFrame" src="content_main.html" title="Основной контент"></iframe>
+        <iframe id="mainFrame" name="mainFrame" src="/content_main.html" title="Основной контент"></iframe>
     </div>
 
     <!-- Плеер, который всегда виден -->
-    <iframe id="playerFrame" src="player.html" title="Аудиоплеер"></iframe>
+    <iframe id="playerFrame" src="/player.html" title="Аудиоплеер"></iframe>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -90,3 +90,4 @@
 </body>
 
 </html>
+
